# three_cpp

./: .gitignore  .travis.yml  CMakeLists copy.txt  CMakeLists.txt  LICENSE  README.md
cmake/: FindGLEW.cmake  FindRapidJSON.cmake  FindSDL2.cmake  ThreeTargets.cmake
examples/: CMakeLists.txt  color_lines.cpp  common.h  common.hpp  custom_attributes_particles.cpp  custom_attributes_particles2.cpp  custom_attributes_particles3.cpp  geometries.cpp  geometry_hierarchy.cpp  geometry_hierarchy2.cpp  geometry_hierarchy_2.cpp  geometry_minecraft.cpp  lines_colors.cpp  lines_cubes.cpp  lines_sphere.cpp  particles_billboards.cpp  particles_billboards_colors.cpp  particles_random.cpp  particles_sprites.cpp  performance_static.bak  performance_static.cpp  shader.cpp  shader2.cpp  shader_fireball.cpp  shader_lava.cpp  simple.cpp  test_memory.cpp  three.cpp  three_extras.cpp  trails.cpp
examples/extras/: anim.cpp  anim.h  sdl.cpp  sdl.h  stats.cpp  stats.h
examples/impl/: three.cpp
src/cameras/: camera.hpp  orthographic_camera.hpp  perspective_camera.hpp
src/core/: clock.hpp  color.hpp  face3.hpp  face4.hpp  frustum.hpp  math.hpp  matrix4.hpp  object3d.hpp  quaternion.hpp  ray.hpp  rectangle.hpp  spline.hpp  uv.hpp  vector2.hpp  vector3.hpp  vector4.hpp
src/scene/: scene.hpp
tests/: math_frustum_test.cpp  math_vector2_test.cpp  math_vector3_test.cpp  test_constants.cpp  test_constants.h
tests/unit/core/: core_event_dispatcher_test.cpp
tests/unit/math/: math_box2_test.cpp  math_box3_test.cpp  math_color_test.cpp  math_dummy_test.cpp  math_euler_test.cpp  math_frustum_test.cpp  math_line3_test.cpp  math_matrix3_test.cpp  math_matrix4_test.cpp  math_plane_test.cpp  math_quaternion_test.cpp  math_ray_test.cpp  math_sphere_test.cpp  math_triangle_test.cpp  math_vector2_test.cpp  math_vector3_test.cpp  math_vector4_test.cpp
three/: common.h  common.hpp  config.h  config.hpp  console.h  console.hpp  constants.h  constants.hpp  extras.h  extras.hpp  fwd.h  fwd.hpp  gl.h  gl.hpp  gl_functions.h  three.h  three.hpp  three_common.hpp  three_config.hpp  utils.hpp  visitor.h  visitor.hpp
three/cameras/: camera.h  camera.hpp  orthographic_camera.h  orthographic_camera.hpp  perspective_camera.h  perspective_camera.hpp
three/core/: bone.hpp  buffer_geometry.h  buffer_geometry.hpp  clock.h  clock.hpp  color.hpp  event.h  event_dispatcher.h  event_listener.h  event_target.h  event_target.hpp  face.h  face.hpp  face3.h  face3.hpp  face4.h  face4.hpp  frustum.hpp  geometry.h  geometry.hpp  geometry.js  geometry_buffer.h  geometry_buffer.hpp  geometry_group.h  geometry_group.hpp  interfaces.h  interfaces.hpp  math.hpp  matrix3.hpp  matrix4.hpp  object3d.h  object3d.hpp  projector.h  projector.hpp  projector.js  quaternion.hpp  ray.hpp  raycaster.h  rectangle.hpp  spline.hpp  (+5 more)
three/core/impl/: buffer_geometry.cpp  buffer_geometry.ipp  frustum.cpp  frustum.ipp  geometry.cpp  geometry.ipp  geometry_buffer.cpp  matrix3.ipp  matrix4.ipp  object3d.cpp  object3d.ipp  projector.cpp  projector.ipp  quaternion.ipp  raycaster.cpp
three/events/: event.h
three/extras/: anim.h  anim.hpp  events.h  events.hpp  geometry_utils.h  geometry_utils.hpp  glew.h  glew.hpp  image_utils.h  image_utils.hpp  noncopyable.hpp  scene_utils.h  scene_utils.hpp  sdl.h  sdl.hpp  stats.h  stats.hpp
three/extras/geometries/: box_geometry.h  circle_geometry.h  cube_geometry.h  cube_geometry.hpp  cylinder_geometry.h  icosahedron_geometry.h  (+14 more)
three/impl/: console.cpp  gl.cpp  src.cpp  src.h  src.hpp  src_extras.cpp  src_extras.h  src_extras.hpp
three/lights/: ambient_light.h  ambient_light.hpp  area_light.h  area_light.hpp  directional_light.h  directional_light.hpp  hemisphere_light.h  hemisphere_light.hpp  light.h  light.hpp  point_light.h  point_light.hpp  spot_light.h  spot_light.hpp
three/loaders/: binary_loader.hpp  geometry_loader.hpp  image_loader.hpp  json_loader.h  json_loader.hpp  loader.h  loader.hpp  loader_monitor.hpp  scene_loader.hpp  texture_loader.hpp
three/materials/: attribute.h  attribute.hpp  custom_attribute.hpp  line_basic_material.h  line_basic_material.hpp  line_dashed_material.h  material.h  material.hpp  mesh_basic_material.h  mesh_basic_material.hpp  mesh_depth_material.h  mesh_depth_material.hpp  mesh_face_material.h  mesh_face_material.hpp  mesh_lambert_material.h  mesh_lambert_material.hpp  mesh_normal_material.h  mesh_normal_material.hpp  mesh_phong_material.h  mesh_phong_material.hpp  particle_basic_material.h  particle_basic_material.hpp  particle_system_material.h  program.h  program.hpp  shader_material.h  shader_material.hpp  text_2d_material.h  text_2d_material.hpp  uniform.h  uniform.hpp
three/math/: Plane.hpp  box2.h  box2.hpp  box3.h  box3.hpp  color.h  color.hpp  euler.h  euler.hpp  face.hpp  face3.hpp  face4.hpp  frustum.h  frustum.hpp  line3.h  line3.hpp  math.h  math.hpp  matrix3.h  matrix3.hpp  matrix4.h  matrix4.hpp  plane.h  plane.hpp  projector.hpp  quaternion.h  quaternion.hpp  ray.h  ray.hpp  rectangle.hpp  sphere.h  sphere.hpp  spline.h  spline.hpp  triangle.h  triangle.hpp  uv.hpp  vector2.h  vector2.hpp  vector3.h  (+4 more)
three/objects/: LOD.h  bone.h  bone.hpp  line.h  line.hpp  mesh.h  mesh.hpp  particle.h  particle.hpp  particle_system.h  particle_system.hpp  skinned_mesh.h  skinned_mesh.hpp  sprite.h
three/renderers/: gl_custom_attribute.hpp  gl_render_target.h  gl_render_target.hpp  gl_render_target_buffer.h  gl_render_target_buffer.hpp  gl_renderer.h  gl_renderer.hpp  gl_shaders.h  gl_shaders.hpp  renderer_parameters.h  renderer_parameters.hpp
three/scenes/: fog.h  fog.hpp  fog_exp2.h  fog_exp2.hpp  scene.h  scene.hpp
three/textures/: compressed_texture.h  compressed_texture.hpp  data_texture.h  data_texture.hpp  texture.h  texture.hpp  texture_buffer.h  texture_buffer.hpp
three/utils/: any.h  any.hpp  conversion.h  conversion.hpp  floating_point_hook.h  functional.h  hash.h  hash.hpp  index.h  index.hpp  macros.h  macros.hpp  memory.h  memory.hpp  noncopyable.h  noncopyable.hpp  optional.h  properties.h  properties.hpp  template.h  template.hpp
(+119 files in other folders)
